--- a/index.html
+++ b/index.html
@@ -7,23 +7,27 @@
   <title>Construction Builders</title>
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
-  <link rel="stylesheet" href="/css/navbar.css">
-  <link rel="stylesheet" href="/css/enquiry.css">
-  <link rel="stylesheet" href="/css/footer.css">
 
-  <link rel="stylesheet" href="/css/topbar.css">
-  <link rel="stylesheet" href="/css/services.css">
-
-  <link rel="stylesheet" href="/css/whychoose.css">
-  <link rel="stylesheet" href="/css/infobanner.css">
-  <link rel="stylesheet" href="/css/projects.css">
+ <link rel="stylesheet" href="../css/topbar.css">
+    <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="../css/banner.css">
+    <link rel="stylesheet" href="../css/blog.css">
+    <link rel="stylesheet" href="../css/contact.css">
+    <link rel="stylesheet" href="../css/enquiry.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/infobanner.css">
+    <link rel="stylesheet" href="../css/projects.css">
+    <link rel="stylesheet" href="../css/services.css">
+    <link rel="stylesheet" href="../css/whychoose.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-  <script src="/js/main.js" defer></script>
+  <script src="../js/main.js"></script>
+  
 </head>
 
 <body>
@@ -56,7 +60,7 @@
 
   <nav class="navbar">
     <div class="logo">
-      <img src="/images\logo\BUILDER2.jpg" alt="builder">
+      <img src="images/logo/BUILDER2.jpg" alt="builder">
     </div>
     <button class="menu-toggle">
       <i class="fas fa-bars"></i>
@@ -194,7 +198,7 @@
 
         <div class="services-cards">
           <div class="service-card">
-            <img src="/images/builderimages/image14.jpg" alt="Industrial Construction" class="card-image">
+            <img src="images/builderimages/image14.jpg" alt="Industrial Construction" class="card-image">
             <div class="card-content">
               <span class="card-divider"></span>
               <h4>INDUSTRIAL CONSTRUCTION</h4>
@@ -203,7 +207,7 @@
             </div>
           </div>
           <div class="service-card">
-            <img src="/images/builderimages/image15.jpg" alt="Residential Construction" class="card-image">
+            <img src="images/builderimages/image15.jpg" alt="Residential Construction" class="card-image">
             <div class="card-content">
               <span class="card-divider"></span>
               <h4>RESIDENTIAL CONSTRUCTION</h4>
