Fixed file paths for GitHub Pages

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,7 +34,7 @@
 
     <nav class="navbar">
         <div class="logo">
-            <img src="/images/logo/BUILDER2.jpg" alt="builder">
+            <img src="../images/logo/BUILDER2.jpg" alt="builder">
         </div>
         <button class="menu-toggle"><i class="fas fa-bars"></i></button>
         <ul class="nav-links">
@@ -147,7 +147,7 @@
     <footer class="footer-section">
     <div class="footer-container">
         <div class="footer-col">
-            <img src="/images/logo/BUILDER2.jpg" alt="Builder Logo">
+            <img src="../images/logo/BUILDER2.jpg" alt="Builder Logo">
             <p>
                 By joining our family, Everyone gains access to a supportive network,
                 lucrative income opportunities, and a promising future.
