--- a/pages/projects.html
+++ b/pages/projects.html
@@ -33,7 +33,7 @@
 
   <nav class="navbar">
     <div class="logo">
-      <img src="/images/logo/BUILDER2.jpg" alt="builder">
+      <img src="../images/logo/BUILDER2.jpg" alt="builder">
     </div>
     <button class="menu-toggle"><i class="fas fa-bars"></i></button>
     <ul class="nav-links">
@@ -90,7 +90,7 @@
 
         <div class="project-grid">
           <div class="project-item" data-category="mining">
-            <img src="/images/builderimages/image8.jpg" alt="Heavy Loader in Mine" class="project-image" />
+            <img src="../images/builderimages/image8.jpg" alt="Heavy Loader in Mine" class="project-image" />
             <div class="project-overlay">
               <div class="overlay-content">
                 <h4>Mining Site Project</h4>
@@ -100,7 +100,7 @@
           </div>
 
           <div class="project-item" data-category="builder">
-            <img src="/images/builderimages/image7.jpg" alt="Bulldozer" class="project-image" />
+            <img src="../images/builderimages/image7.jpg" alt="Bulldozer" class="project-image" />
             <div class="project-overlay">
               <div class="overlay-content">
                 <h4>Road Construction</h4>
@@ -110,7 +110,7 @@
           </div>
 
           <div class="project-item" data-category="mining">
-            <img src="/images/builderimages/image9.jpg" alt="Excavator" class="project-image" />
+            <img src="../images/builderimages/image9.jpg" alt="Excavator" class="project-image" />
             <div class="project-overlay">
               <div class="overlay-content">
                 <h4>Quarry Excavation</h4>
@@ -120,7 +120,7 @@
           </div>
 
           <div class="project-item" data-category="portable repair">
-            <img src="/images/builderimages/image10.jpg" alt="Heavy Machinery" class="project-image" />
+            <img src="../images/builderimages/image10.jpg" alt="Heavy Machinery" class="project-image" />
             <div class="project-overlay">
               <div class="overlay-content">
                 <h4>Heavy Equipment Repair</h4>
@@ -130,7 +130,7 @@
           </div>
 
           <div class="project-item" data-category="builder">
-            <img src="/images/builderimages/image11.jpg" alt="Digger" class="project-image" />
+            <img src="../images/builderimages/image11.jpg" alt="Digger" class="project-image" />
             <div class="project-overlay">
               <div class="overlay-content">
                 <h4>Foundation Work</h4>
@@ -140,7 +140,7 @@
           </div>
 
           <div class="project-item" data-category="mining">
-            <img src="/images/builderimages/image15.jpg" alt="Trucks and Dozers" class="project-image" />
+            <img src="../images/builderimages/image15.jpg" alt="Trucks and Dozers" class="project-image" />
             <div class="project-overlay">
               <div class="overlay-content">
                 <h4>Large Scale Earthworks</h4>
@@ -150,7 +150,7 @@
           </div>
 
           <div class="project-item" data-category="portable">
-            <img src="/images/builderimages/image6.jpg" alt="Truck with Crane" class="project-image" />
+            <img src="../images/builderimages/image6.jpg" alt="Truck with Crane" class="project-image" />
             <div class="project-overlay">
               <div class="overlay-content">
                 <h4>Transportation & Lifting</h4>
@@ -160,7 +160,7 @@
           </div>
 
           <div class="project-item" data-category="mining">
-            <img src="/images/builderimages/image8.jpg" alt="Dump Truck" class="project-image" />
+            <img src="../images/builderimages/image8.jpg" alt="Dump Truck" class="project-image" />
             <div class="project-overlay">
               <div class="overlay-content">
                 <h4>Material Hauling</h4>
@@ -260,7 +260,7 @@
   <footer class="footer-section">
     <div class="footer-container">
       <div class="footer-col">
-        <img src="/images/logo/BUILDER2.jpg" alt="Builder Logo">
+        <img src="../images/logo/BUILDER2.jpg" alt="Builder Logo">
         <p>
           By joining our family, Everyone gains access to a supportive network,
           lucrative income opportunities, and a promising future.
