--- a/index.html
+++ b/index.html
@@ -8,25 +8,27 @@
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
 
- <link rel="stylesheet" href="../css/topbar.css">
-    <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/about.css">
-    <link rel="stylesheet" href="../css/banner.css">
-    <link rel="stylesheet" href="../css/blog.css">
-    <link rel="stylesheet" href="../css/contact.css">
-    <link rel="stylesheet" href="../css/enquiry.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/infobanner.css">
-    <link rel="stylesheet" href="../css/projects.css">
-    <link rel="stylesheet" href="../css/services.css">
-    <link rel="stylesheet" href="../css/whychoose.css">
+
+
+<link rel="stylesheet" href="css/topbar.css">
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/banner.css">
+    <link rel="stylesheet" href="css/blog.css">
+    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/enquiry.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/infobanner.css">
+    <link rel="stylesheet" href="css/projects.css">
+    <link rel="stylesheet" href="css/services.css">
+    <link rel="stylesheet" href="css/whychoose.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-  <script src="../js/main.js"></script>
+  <script src="js/main.js"></script>
   
 </head>
 
