--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="css/topbar.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/about.css">
-    <link rel="stylesheet" href="css/banner.css">
+    
     <link rel="stylesheet" href="css/blog.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/enquiry.css">
@@ -69,7 +69,7 @@
     </button>
     <ul class="nav-links">
       <li><a href="/" class="active">Home</a></li>
-      <li><a href="../pages/about.html">About</a></li>
+      <li><a href="/pages/about.html">About</a></li>
 
       <li class="dropdown-container">
         <div class="dropdown">
