--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </button>
     <ul class="nav-links">
       <li><a href="/" class="active">Home</a></li>
-      <li><a href="/pages/about.html">About</a></li>
+      <li><a href="pages/about.html">About</a></li>
 
       <li class="dropdown-container">
         <div class="dropdown">
@@ -84,9 +84,9 @@
         </div>
       </li>
 
-      <li><a href="/pages/projects.html">Projects</a></li>
+      <li><a href="pages/projects.html">Projects</a></li>
       <li><a href="pages/blog.html">Blog</a></li>
-      <li><a href="/pages/Contact.html">Contact</a></li>
+      <li><a href="pages/Contact.html">Contact</a></li>
     </ul>
   </nav>
 
